# OBJECT_RECOGNITION

./: .clang-format-compare.py  .fetch-build-environment.sh  .gitignore  .travis.yml  BuildModule.cmake  CMakeLists.txt  Sources.cmake  TestModule.cmake  opencv_install.sh  run.sh
build_test/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  unit_test
src/: image_object.cpp  image_object.hpp  main.cpp  open_cv.hpp  sample_image.cpp  sample_image.hpp
src/binaries/files/: demo settings
src/image/: image.hpp  root_image.cpp  root_image.hpp  sample_image.cpp  sample_image.hpp
src/object_finding/: feature_comparator.cpp  feature_comparator.hpp  feature_descriptor.cpp  feature_descriptor.hpp  feature_detector.cpp  feature_detector.hpp  object_finder.cpp  object_finder.hpp
src/test_log/: image_parser_viewer.cpp  live_video_feed_object_recognition.cpp  template_code.cpp
src/window/: image_viewer.cpp  image_viewer.hpp  video_controller.cpp  video_controller.hpp
src/window/interface/: cli.cpp  cli.hpp  gui.cpp  gui.hpp  window.hpp
test/: catch.hpp  test_main.cpp
